[package]
name = "increase-cu-program-size"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.16"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
solana-program-test = "2.1.16"
solana-sdk = "2.1.16"
solana-client = "2.1.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
solana-transaction-status = "2.1.16"
bincode = "1.3.3"
